@startuml

skinparam dpi 150
skinparam shadowing false
skinparam DefaultFontName Arial
skinparam DefaultFontSize 13
skinparam ArrowColor #14507A
skinparam roundCorner 6

skinparam state {
  BackgroundColor #EAF3FA
  BorderColor #1B6CA8
}
[*] --> EN_ATTENTE : soumission\n(utilisateur)
EN_ATTENTE --> EN_COURS : approbation\n(directeur commercial)
EN_ATTENTE --> REFUSE : refus\n(directeur commercial)
EN_COURS --> EFFECTUE : exécution\n(administrateur)
EFFECTUE --> [*]
REFUSE --> [*]
note right of EN_ATTENTE : statut initial\n(table DEMANDES_MODIFICATION)
note right of EFFECTUE : modification appliquée,\njournalisée et notifiée
@enduml
